fixed comment button appearance on small devices

--- a/src/components/comment/CommentForm/styles.module.scss
+++ b/src/components/comment/CommentForm/styles.module.scss
@@ -20,42 +20,15 @@
 .buttons {
   position: relative;
   z-index: 1;
-  display: grid;
+  display: flex;
   background: transparentize(black, 0.8);
-  padding: $gap / 2;
   border-radius: 0 0 $radius $radius;
   flex-wrap: wrap;
-  column-gap: $gap;
-  grid-template-columns: auto 1fr auto;
-  grid-template-rows: 1fr;
-  grid-template-areas: "attach format submit";
+  padding: $gap / 4;
+}
 
-  @media(max-width: 470px) {
-    padding: $gap;
-    grid-template-columns: 1fr auto;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas:
-    "attach format"
-    "submit submit";
-    row-gap: $gap;
-  }
-
-  &_attach {
-    grid-area: attach;
-  }
-
-  &_format {
-    grid-area: format;
-  }
-
-  &_submit {
-    grid-area: submit;
-    display: grid;
-    grid-auto-flow: column;
-    align-items: flex-end;
-    justify-content: flex-end;
-    column-gap: $gap / 2;
-  }
+.button_column {
+  padding: $gap / 4;
 }
 
 .uploads {
