--- a/src/components/comment/CommentFormFormatButtons/styles.module.scss
+++ b/src/components/comment/CommentFormFormatButtons/styles.module.scss
@@ -6,4 +6,9 @@
   height: 32px;
   flex: 1;
   width: 100%;
+  min-width: 0;
+}
+
+.button {
+  white-space: nowrap;
 }
